[workspace]
members = [
  "crates/nbx-wallet",
  "crates/nbx-ztd",
  "crates/nbx-crypto",
  "crates/nbx-nockchain-types",
  "crates/nbx-grpc-proto",
  "crates/nbx-wasm",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies.nbx-wallet]
path = "crates/nbx-wallet"

[workspace.dependencies.nbx-ztd]
path = "crates/nbx-ztd"

[workspace.dependencies.nbx-crypto]
path = "crates/nbx-crypto"


[workspace.dependencies.nbx-nockchain-types]
path = "crates/nbx-nockchain-types"

[workspace.dependencies.nbx-wasm]
path = "crates/nbx-wasm"

[workspace.dependencies]
nockvm = { git = "https://github.com/zorp-corp/nockchain.git" }
nockchain-math = { git = "https://github.com/zorp-corp/nockchain.git" }
ibig = "0.3"
