[workspace]
members = [
  "crates/iris-wallet",
  "crates/iris-ztd",
  "crates/iris-crypto",
  "crates/iris-nockchain-types",
  "crates/iris-grpc-proto",
  "crates/iris-wasm",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies.iris-wallet]
path = "crates/iris-wallet"

[workspace.dependencies.iris-ztd]
path = "crates/iris-ztd"

[workspace.dependencies.iris-crypto]
path = "crates/iris-crypto"


[workspace.dependencies.iris-nockchain-types]
path = "crates/iris-nockchain-types"

[workspace.dependencies.iris-wasm]
path = "crates/iris-wasm"

[workspace.dependencies]
nockvm = { git = "https://github.com/zorp-corp/nockchain.git" }
nockchain-math = { git = "https://github.com/zorp-corp/nockchain.git" }
ibig = "0.3"
