[workspace]
members = [
  "crates/rose-ztd",
  "crates/rose-crypto",
  "crates/rose-nockchain-types",
  "crates/rose-grpc-proto",
  "crates/rose-wasm",
]

resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"

[workspace.dependencies.rose-ztd]
path = "crates/rose-ztd"

[workspace.dependencies.rose-crypto]
path = "crates/rose-crypto"

[workspace.dependencies.rose-nockchain-types]
path = "crates/rose-nockchain-types"

[workspace.dependencies.rose-wasm]
path = "crates/rose-wasm"

[workspace.dependencies.rose-grpc-proto]
path = "crates/rose-grpc-proto"

[workspace.dependencies.rose-ztd-derive]
path = "crates/rose-ztd-derive"

[workspace.dependencies]
nockvm = { git = "https://github.com/zorp-corp/nockchain.git" }
nockchain-math = { git = "https://github.com/zorp-corp/nockchain.git" }
ibig = "0.3"
