[package]
name = "iris-nockchain-types"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
iris-ztd = { workspace = true }
iris-ztd-derive = { path = "../iris-ztd-derive" }
bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
iris-crypto = { path = "../iris-crypto" }
serde = { version = "1.0", features = ["derive"], default-features = false }
thiserror = "2.0"
ibig = { workspace = true }
