[package]
name = "iris-ztd"
version.workspace = true
edition.workspace = true

[dependencies]
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
ibig = { workspace = true }
once_cell = "1.21"
arrayref = "0.3"
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }

[features]
default = ["std"]
std = ["serde/std"]
