[package]
name = "nbx-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
nbx-ztd = { workspace = true }
nbx-ztd-derive = { path = "../nbx-ztd-derive" }
ibig = { workspace = true }
bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
hmac = "0.12"
sha2 = "0.10"
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
