[package]
name = "rose-grpc-proto"
version.workspace = true
edition.workspace = true
keywords = ["nockchain", "rose", "wallet", "nock"]
license = "MIT"
repository = "https://github.com/nocktoshi/rose-rs"
rust-version = "1.85.0"
description = "Nockchain gRPC protobuf definitions"
documentation = "https://docs.rs/rose-grpc-proto"
homepage = "https://nockchain.net"
authors = ["Nockchain.net LLC <rust@nockchain.net>"]

[dependencies]
rose-nockchain-types = { workspace = true }
rose-ztd = { workspace = true }
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"] }
thiserror = "2.0"
bip39 = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
ibig = { workspace = true }
rose-crypto = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { version = "0.12", features = ["transport"] }

[dev-dependencies]
rose-crypto = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[build-dependencies]
glob = "0.3"
prost-build = "0.13"
tonic-build = "0.12"
