[package]
name = "rose-wasm"
version.workspace = true
edition.workspace = true
keywords = ["nockchain", "rose", "wallet", "nock"]
license = "MIT"
repository = "https://github.com/nocktoshi/rose-rs"
rust-version = "1.85.0"
description = "WASM bindings for Rose wallet"
documentation = "https://docs.rs/rose-wasm"
homepage = "https://nockchain.net"
authors = ["Nockchain.net LLC <rust@nockchain.net>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rose-crypto = { workspace = true }
rose-nockchain-types = { workspace = true }
rose-ztd = { workspace = true }
rose-grpc-proto = { workspace = true }
ibig = { workspace = true }
bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
tonic-web-wasm-client = "0.6"
web-sys = { version = "0.3", features = ["console"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
