[package]
name = "rose-ztd"
version.workspace = true
edition.workspace = true
keywords = ["nockchain", "rose", "wallet", "nock"]
license = "MIT"
repository = "https://github.com/nocktoshi/rose-rs"
rust-version = "1.85.0"
description = "Base Zero-knowledge data structures and noun-lib for Nockchain"
documentation = "https://docs.rs/rose-ztd"
homepage = "https://nockchain.net"
authors = ["Nockchain.net LLC <rust@nockchain.net>"]

[dependencies]
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
ibig = { workspace = true }
once_cell = "1.21"
arrayref = "0.3"
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }

[features]
default = ["std"]
std = ["serde/std"]
